Added dof analysis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ file(GLOB SOURCES "src/*.c")
 add_library(gcs STATIC ${SOURCES})
 target_link_libraries(gcs)
 
-file(GLOB TEST_MEMORY_SOURCES "tests/test_memory.c")
-add_executable(test_memory ${TEST_MEMORY_SOURCES})
-target_link_libraries(test_memory gcs)
+file(GLOB TEST_GCS_SOURCES "tests/test_gcs.c")
+add_executable(test_gcs ${TEST_GCS_SOURCES})
+target_link_libraries(test_gcs gcs)
