--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,11 @@ target_link_libraries(gcs)
 
 file(GLOB TEST_GCS_SOURCES "tests/test_gcs.c")
 add_executable(test_gcs ${TEST_GCS_SOURCES})
-target_link_libraries(test_gcs gcs)
+
+if (WIN32)
+    set(MATH "")
+else ()
+    set(MATH "m")
+endif ()
+
+target_link_libraries(test_gcs gcs ${MATH})
